oops lets try again

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 const SERVER_PORT = 4004
 
 // const CONNECTION_STRING = DO THIS LATER BUT LIKE ACTUALLY YOU NEED TO DO IT
+
+// I accidentally formatted this file the wrong way i hope that 
+//updating the file will fix the issue
