Push from local machine

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-const SERVER_PORT = 4004
+const { Pool } = require('pg');
 
-// const CONNECTION_STRING = DO THIS LATER BUT LIKE ACTUALLY YOU NEED TO DO IT
+const pool = new Pool({
+  user: 'your_user',
+  host: 'your_host',
+  database: 'your_database',
+  password: 'your_password',
+  port: 5432, // default PostgreSQL port
+});
 
-
+pool.query('SELECT NOW()', (err, res) => {
+  console.log(err, res);
+  pool.end();
+});
